--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/server/src/main/webapp/index.html
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/server/src/main/webapp/index.html
@@ -1,18 +1,19 @@
 <!doctype html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<link rel="shortcut icon" href="favicon.ico"/>
-    <meta charset=UTF-8>
-    <title>Welcome to ${module-short-name}</title>
-    <script src="${module-short-name}/${module-short-name}.nocache.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
-      </div>
-    </noscript>
-  </body>
+ <head>
+  <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+  <link rel="shortcut icon" href="favicon.ico"/>
+  <meta charset=UTF-8>
+  <title>Welcome to ${module-short-name}</title>
+  <script src="${module-short-name}/${module-short-name}.nocache.js"></script>
+  <link rel="stylesheet" type="text/css" href="fonts/font.css">
+ </head>
+ <body>
+  <noscript>
+   <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+    Your web browser must have JavaScript enabled
+    in order for this application to display correctly.
+   </div>
+  </noscript>
+ </body>
 </html>
