--- a/empty-webapp/src/main/resources/archetype-resources/server/src/main/webapp/index.html
+++ b/empty-webapp/src/main/resources/archetype-resources/server/src/main/webapp/index.html
@@ -1,19 +1,18 @@
 <!doctype html>
-<html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-	<link rel="shortcut icon" href="favicon.ico"/>
-    <meta charset=UTF-8>
-    <link type="text/css" rel="stylesheet" href="${rootArtifactId}.css">
-    <title>Welcome to ristek.com</title>
-    <script src="${module-short-name}/${module-short-name}.nocache.js"></script>
-  </head>
-  <body>
-    <noscript>
-      <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
-        Your web browser must have JavaScript enabled
-        in order for this application to display correctly.
-      </div>
-    </noscript>
-  </body>
+<html lang="zh-cn" dir="ltr">
+ <head>
+  <meta http-equiv="content-type" content="text/html">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="favicon.ico">
+  <title>Welcome to ${module-short-name}</title>
+  <script src="${module-short-name}/${module-short-name}.nocache.js"></script>
+ </head>
+ <body>
+  <noscript>
+   <div style="width: 22em; position: absolute; left: 50%; margin-left: -11em; color: red; background-color: white; border: 1px solid red; padding: 4px; font-family: sans-serif">
+    Your web browser must have JavaScript enabled
+    in order for this application to display correctly.
+   </div>
+  </noscript>
+ </body>
 </html>
