Redesign HomeCard layout. Redesign Menu layout. Add EventBus based on websocket. Bug fixed.

--- a/gwtp-frame-shiro/src/main/resources/archetype-resources/client/src/main/java/public/login.html
+++ b/gwtp-frame-shiro/src/main/resources/archetype-resources/client/src/main/java/public/login.html
@@ -27,7 +27,7 @@
   content: '';
   display: block;
  }
- .lg-center {margin: 0 auto; width: var(--rt-cellwidth-3); border-radius: 5px;}
+ .lg-center {margin: 0 auto; max-width: var(--rt-cellwidth-3); border-radius: 5px;}
  .lg-commit-button {cursor: pointer; width: 100%; font-size: 1.2rem; text-align: center; color: #FFFFFF;
   box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
   border: 0; border-radius: 2px;
@@ -112,7 +112,7 @@
 </head>
 <body>
 <div class='container rt-color-tone'>
-<div class="lg-center rt-bx-shadow">
+<div class="rt-bx-shadow rt-place-center lg-center">
  <div style="padding: 20px; font-size: 40px; text-align: center; font-weight: 700; line-height: 52px;">Login</div>
  <form>
  <div style="padding: 20px 40px;">
